Enhance .gitignore to include additional Kafka, MongoDB, and MQTT/Mosquitto data and log files. This update improves file management by ensuring unnecessary files are ignored during version control.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,32 @@
 # Ignore Kafka data files
 infra/kafka_data/
+kafka_data/
+
+# Ignore Kafka log files
+infra/kafka/log/
+kafka/log/
+*.kafka.log
 
 # Ignore MongoDB data files
 infra/mongodb_data/
+mongodb_data/
 
-# Ignore Mosquitto log files
+# Ignore MongoDB log files
+infra/mongodb/log/
+mongodb/log/
+*.mongo.log
+*.mongodb.log
+
+# Ignore MQTT/Mosquitto data files
+infra/mosquitto/data/
+mosquitto/data/
+mqtt/data/
+
+# Ignore MQTT/Mosquitto log files
 infra/mosquitto/log/
+mosquitto/log/
+mqtt/log/
+*.mqtt.log
 
 # Ignore Python compiled files
 *.pyc
